# ML_Projects

./: .gitignore  README.md  pyproject.toml  run.py
Projects/Classification/01.Spaceship_Titanic/: 01.Limpieza_EDA.ipynb
Projects/Classification/prueba_plantilla_de_datos/: CLAUDE.md  README.md  run.py
_scripts/: create_nb04_1.py  create_nb05.py  create_nb4.py  fix_nb3_savepath.py  update_nb3.py
logs/catboost/: catboost_training.json  learn_error.tsv  time_left.tsv
logs/catboost/learn/: events.out.tfevents
models/production/: model_metadata.json
notebooks/: 01.Initial_exploration.ipynb  02.Analisis_Target.ipynb  03.feature_engineering.ipynb
reports/: 01_eda.html
scripts/: 01_eda.py  02_features.py  03_train.py  03_train_tabnet.py  04_predict.py  05_ensemble.py
src/api/: main.py  models.py
src/config/: __init__.py  settings.py
src/data/: eda.py  quality_checks.py
src/features/: constants.py  engineering.py  feature_sets.py
src/features/engineering/: __init__.py  base.py  derived.py  encoders.py
src/models/: catalogue.py  moe.py  predict.py  tabnet_wrapper.py  tracking.py  training.py
src/pipelines/: data_pipeline.py  eda_pipeline.py  feature_pipeline.py  orchestration.py  training_pipeline.py
src/reports/: builder.py  eda_plots.py  eda_reports.py  experiment_log.py  feature_plots.py  feature_reports.py  model_cards.py  prediction_report.py  training_plots.py  training_report.py
src/utils/: ai_insights.py  cli.py  orchestration.py
tests/: conftest.py  test_data_pipeline_api.py  test_orchestration.py  test_report_factory_context.py
(+104 files in other folders)
